# connectivity-modifier

./: .gitignore  ANALYSIS.md  LICENSE  README.md  default_config.toml  pyproject.toml  test.txt
.github/workflows/: release.yml
analysis_scripts/: compare_clusterings.py  summary_statistics_printer.py  visualize_history.py
data/: ring_four_k10s.edge_list  ring_two_k5s.edge_list  two_k5s.edge_list  two_k5s_non_continuous.edge_list
hm01/: basics.py  cm.py  config.py  connectivity_requirement.py  context.py  cut_clusters.py  export_clusters.py  graph.py  ikc_wrapper.py  impact_hm01.py  leiden_wrapper.py  mincut.py  pruner.py  to_universal.py  types.py
hm01/clusterers/: abstract_clusterer.py  ikc_wrapper.py  leiden_wrapper.py
tests/: conftest.py  test_cli.py  test_context.py  test_faithfulness.py  test_graph_construction.py  test_ikc_clusterer.py  test_leiden_clusterer.py  test_mincut.py  test_modularity.py  test_pruner.py  test_realized_subgraph.py
