[tool.poetry]
name = "connectivity-modifier"
version = "0.1.0-alpha.0"
description = "connectivity modifier"
packages = [
	{ include = "hm01" }
]
authors = ["runeblaze <runeblaze@excite.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
networkit = "^10.0"
pytest = "^7.1.3"
numpy = "^1.23.3"
typer = "^0.6.1"
tomli = "^2.0.1"
pandas = "^1.5.0"
colorama = "^0.4.5"
coloredlogs = "^15.0.1"
leidenalg = "^0.9.0"
structlog = "^22.1.0"
treeswift = "^1.1.28"
jsonpickle = "^2.2.0"
graphviz = "^0.20.1"
typing-extensions = "^4.4.0"
HeapDict = "^1.0.1"

[tool.poetry.scripts]
cm = 'hm01.cut_clusters:entry_point'
cm2universal = 'hm01.impact_hm01:entry_point'

[tool.poetry.group.dev.dependencies]
mypy = "^0.982"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
